# poulet_py

./: README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-issue.md  config.yml
docs/: contributing.md  index.md  release-notes.md
poulet_py/hardware/: __init__.py  arduino.py  julabo_chiller.py
poulet_py/hardware/camera/: __init__.py  basler.py  thermal_camera.py  uvctypes.py
poulet_py/hardware/thermal_stimulators/: __init__.py  qst.py
poulet_py/session/: __init__.py
poulet_py/tools/: __init__.py  generators.py  math.py  organisational.py  serializers.py
poulet_py/utils/: __init__.py  logger.py
scripts/: clean  publish
